Remove background image from home access data section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
         <ul>
           <li class="main__what-is__link">U.S. Data</li>
           <li class="main__what-is__link">International Data</li>
-          <li class="main__what-is__link">Typical Meteorological Year</li>
         </ul>
+        <p>
+          TMY stands for "typical meteorological year" and is a widely used type of data available through the NSRDB. TMYs contain one year of hourly data that best represent weather conditions over a multiyear period. <a href="https://nsrdb.nrel.gov/tmy" target="_blank">Click here</a> to learn more about TMY.
+        </p>
+<!--           <li class="main__what-is__link">Typical Meteorological Year</li> -->
+
       </section>
       <section class="main__data" id="access-data">
         <div class="drop-shadow-text-box">
@@ -58,46 +62,58 @@
             NSRDB Data is publicly available at no cost. The data can be accessed via the NSRDB Viewer, an API, or through Globus.
           </p>
         
-        <div class="ways-to-access-data">
-          <article class="nsrdb-viewer">
-            <div class="nsrdb-viewer--header data-show">
-              <h1>NSRDB VIEWER</h1>
-            </div>
-            <div class="nsrdb-viewer--info data-hide">
-              <h4>NSRDB Viewer</h4>
-              <p>The NSRDB Viewer is the easiest way to download NSRDB  data. It is a geospatial web application that allows for   the visualization and download of NSRDB data. </p>
-              <button>Go to Viewer</button>
-            </div>
-          </article>
-          <article class="nsrdb-api">
-            <div class="nsrdb-api--header data-show">
-              <h1>NSRDB API</h1>
-            </div>
-            <div class="nsrdb-api--info data-hide">
-              <h4>NSRDB API</h4>
-              <p>NSRDB data is also available through an API. Go to <a  href="https://developer.nrel.gov/" target="_blank">  developer.nrel.gov</a> to sign up for an API key and  request data from the API.</p>
-            </div>
-          </article>
-          <article class="globus-data">
-            <div class="globus-data--header data-show">
-            <h1>Globus Data Download</h1>
-            </div>
-            <div class="globus-data--info data-hide">
-              <h4>Globus Data Download</h4>
-              <p>To download a very large amount of data, it is   necessary to use Globus. See instructions for using   Globus to download NSRDB data <a href="">here.</a></p>
-            </div>
-          </article>
-        </div>
-        <div class="compatability">
+          <div class="ways-to-access-data">
+            <article class="nsrdb-viewer box1">
+              <div class="nsrdb-viewer--header data-show">
+                <h1>NSRDB VIEWER</h1>
+              </div>
+              <div class="nsrdb-viewer--info data-hide">
+                <h4>NSRDB Viewer</h4>
+                <p>The NSRDB Viewer is the easiest way to download NSRDB  data. It is a geospatial web application that allows for the visualization and download of NSRDB data. <a href="https://maps.nrel.gov/nsrdb-viewer/#/?aL=UdPEX9%255Bv%255D%3Dt%268VWYIh%255Bv%255D%3Dt%268VWYIh%255Bd%255D%3D1&bL=groad&cE=0&lR=0&mC=31.653381399664%2C-3.1640625&zL=2">Click here</a> to go to the viewer.</p>
+              </div>
+            </article>
+            <article class="nsrdb-api box1">
+              <div class="nsrdb-api--header data-show">
+                <h1>NSRDB API</h1>
+              </div>
+              <div class="nsrdb-api--info data-hide">
+                <h4>NSRDB API</h4>
+                <p>NSRDB data is also available through an API. Go to <a  href="https://developer.nrel.gov/" target="_blank">  developer.nrel.gov</a> to sign up for an API key and  request data from the API.</p>
+              </div>
+            </article>
+            <article class="globus-data box1">
+              <div class="globus-data--header data-show">
+                <h1>Globus Data Download</h1>
+              </div>
+              <div class="globus-data--info data-hide">
+                <h4>Globus Data Download</h4>
+                <p>To download a very large amount of data, it is necessary to use Globus. See instructions for using Globus to download NSRDB data <a href="">here.</a></p>
+              </div>
+            </article>
+          </div>
           <p>
             NSRDB data are compatible with many system performance and economic models, including the following products created by NREL:
           </p>
-          <ul>
-            <li> <a href="https://sam.nrel.gov/" target="_blank">System Advisor Model (SAM)</a></li>
-            <li><a href="http://pvwatts.nrel.gov/" target="_blank">PVWatts</a></li>
-            <li><a href="http://www.nrel.gov/electricity/transmission/sind_toolkit.html" target="_blank">Solar Integration National Dataset (SIND) Toolkit </a></li>
-          </ul>
-        </div>
+          <div class="compatability">
+            <article class="compatability-sam box2">
+              <div class="compatability-sam--header data-show">
+                <h1>System Advisor Model (SAM)</h1>
+              </div>
+              <div class="compatability-sam--info data-hide">
+                <h4>System Advisor Model (SAM)</h4>
+                <p>Placeholder: NSRDB Data are used as inputs into other NREL tools. <a href="https://sam.nrel.gov/">Click here.</a></p>
+              </div>
+            </article>
+            <article class="compatability-pvwatts box2">
+              <div class="compatability-pvwatts--header data-show">
+                <h1>PVWatts</h1>
+              </div>
+              <div class="compatability-pvwatts--info data-hide">
+                <h4>PVWatts</h4>
+                <p>Placeholder: NSRDB Data are used as inputs into other NREL tools. <a href="http://pvwatts.nrel.gov/">Click here.</a></p>
+              </div>
+            </article>
+          </div>
         </div>
       </section>
       <section class="main__contributors" id="contributors">
