Fix international layout took out pictures and made the overall page feel less busy

--- a/index/US-data.html
+++ b/index/US-data.html
@@ -31,8 +31,8 @@
         <button class="nav__drop-down__button"></button>
         <div class="nav__drop-down__content">
           <a href="https://nsrdb.nrel.gov/">HOME</a>
-          <a href="https://nsrdb.nrel.gov/#access-data">ACCESTHE DATA</a>
-          <a href="https://nsrdb.nrel.gov/#whatis">ABOUT THDATA</a>
+          <a href="https://nsrdb.nrel.gov/#access-data">ACCESS THE DATA</a>
+          <a href="https://nsrdb.nrel.gov/#whatis">ABOUT THE DATA</a>
           <a href="https://nsrdb.nrel.gov/resources">RESOURC</a>
           <a href="https://nsrdb.nrel.gov/contact">CONTACT</a>
         </div>
@@ -48,11 +48,12 @@
     </nav>
     <header class="header"> 
       <h1 class="header__h1">NATIONAL  SOLAR RADIATION DATABASE</h1>
-      <h2 class="header__h2">ABOUT</h2>
+      <h2 class="header__h2">ABOUT THE DATA</h2>
+      
     </header>
     <main>
       <section class="about-description">
-        <h3 class="about-description__h3">U.S. DATA</h3>
+        <h3 class="about-description__h3">US DATA</h3>
         <p>NREL has provided solar resource data for the United States through the NRSDB for more than 25 years. We have also recently begun to collect data from a growing number of international locations, including India; to learn more, visit the <a href="https://nsrdb.nrel.gov/international-datasets">NSRDB International page.</a> </p>
       </section>
       <ul class="main__links about-page__main-links">
@@ -311,13 +312,14 @@
         </div>
       </section>
       <section class="notes" id="notes">
-        <h3>NOTES</h3>
-        <p>Snow data has missing values.
+          <h3>NOTES</h3>
+          <p>Snow data has missing values.
 
-        11/12/2015 – Relative Humidity data is incorrect; we are in the process of correcting the data.
+          11/12/2015 – Relative Humidity data is incorrect; we are in the process of correcting the data.
 
-        11/12/2015 – There is a time period in few pixels where the maximum DNI goes above the extraterrestrial values; we are in the process of correcting this.</p>
+          11/12/2015 – There is a time period in few pixels where the maximum DNI goes above the extraterrestrial values; we are in the process of correcting this.</p>
       </section>
+      <section class="footer_image"></section>
     </main>
     <footer class="disclaimer" role="contentInfo">
       <p class="disclaimer__NREL-disclaimer">
@@ -331,5 +333,8 @@
       </ul>
       <p class="disclaimer__github-link"><a href="https://github.com/18F/product-guide/edit/18f-pages/pages/product-management-at-18f.md">Edit this page</a> or <a href="https://github.com/18F/product-guide/issues">file an issue</a> on GitHub</p>      
     </footer>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="downloads/jquery-3.2.1.min.js"><\/script>')</script>
+    <script src="../script.js"></script>
   </body>
 </html>
