--- a/index/international-data.html
+++ b/index/international-data.html
@@ -48,7 +48,7 @@
     </nav>
     <header class="header"> 
       <h1 class="header__h1">NATIONAL SOLAR RADIATION DATABASE</h1>
-      <h2 class="header__h2">ABOUT</h2>
+      <h2 class="header__h2">ABOUT THE DATA</h2>
     </header>
     <main>
       <section class="international-description">
@@ -158,6 +158,7 @@
           <li>5. Gueymard, C., (2013): Personal Communication</li>
         </ul>
       </section>
+      <section class="footer_image"></section>
     </main>
     <footer class="disclaimer" role="contentInfo">
       <p class="disclaimer__NREL-disclaimer">
