--- a/index/TMY-page.html
+++ b/index/TMY-page.html
@@ -222,5 +222,8 @@
       </ul>
       <p class="disclaimer__github-link"><a href="https://github.com/18F/product-guide/edit/18f-pages/pages/product-management-at-18f.md">Edit this page</a> or <a href="https://github.com/18F/product-guide/issues">file an issue</a> on GitHub</p>      
     </footer>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="downloads/jquery-3.2.1.min.js"><\/script>')</script>
+    <script src="../script.js"></script>
   </body>
 </html>
