--- a/index/TMY-page.html
+++ b/index/TMY-page.html
@@ -70,12 +70,10 @@
         </li class="main-links__li">
       </ul>
       <section class="what-is-TMY__section" id="what-is-TMY">
-        <div class="drop-shadow-text-box">
           <h3 class="TMY__h3" >WHAT IS TMY?</h3>
           <p>The data are considered "typical" because the entirety of the original solar radiation and meteorological data is condensed into one year's worth of the most usual conditions. Although a TMY can be thought of as an average, the methods used to calculate it consider many factors beyond a simple calculation of average values, including solar resource data and weather data such as wind speed and ambient temperature.
 
           To calculate a TMY, a multiyear data set is analyzed and 12 months are chosen from that time frame that best represent typical conditions. For example, a TMY developed from a set of data for the years 1998–2005 might use data from 2000 for January, 2003 for February, 1999 for March, and so on.</p>
-        </div>
       </section>
       <section id="data-used">
           <h3 class="TMY__h3">WHAT IS TMY DATA USED FOR?</h3>
@@ -85,12 +83,10 @@
         </div>
       </section>
       <section class="TMY-data-format__section" id="format-data">
-        <div class="drop-shadow-text-box">
           <h3>FORMAT OF TMY DATA</h3>
           <p>All TMY data are now in the System Advisor Model (SAM) CSV file format. Formerly, TMY data were available only through TMY file formats (i.e., TMY, TMY2, TMY3). By switching to the more user-friendly SAM CSV, TMY data are more flexible than ever and can be plugged into the vast majority of solar modeling programs.
 
           Gridded TMY data is derived from the 4-km by 4-km gridded NSRDB data, with the 1998–2014 data being used in the currently available TMY.</p>
-        </div>
       </section>
       <section class="TMY-data__table" id="TMY-tables">
         <h3>TMY DATA TABLES</h3>
@@ -209,6 +205,7 @@
           </tbody>
         </table>
       </section>
+      <section class="footer_image"></section>
     </main>
     <footer class="disclaimer" role="contentInfo">
       <p class="disclaimer__NREL-disclaimer">
