Fix buttons on globus data page

--- a/index/globus-data.html
+++ b/index/globus-data.html
@@ -57,28 +57,28 @@
         For larger data sets, it is necessary to use Globus to manage the data downloads. Below are detailed instructions on how to use the Globus system in conjunction with the NSRDB Viewer.
       </p>
       <ul class="main__links">
-        <li class="main-links-globus">
+        <li class="main-links-globus main-links__li">
           <a class="main__links__sections" href="#step-one">STEP 1</a>
         </li>
-        <li class="main-links-globus">
+        <li class="main-links-globus main-links__li">
           <a class="main__links__sections" href="#step-two">STEP 2</a>
         </li>
-        <li class="main-links-globus">
+        <li class="main-links-globus main-links__li">
           <a class="main__links__sections" href="#step-three">STEP 3</a>
         </li>
-        <li class="main-links-globus">
+        <li class="main-links-globus main-links__li">
           <a class="main__links__sections" href="#step-four">STEP 4</a>
         </li> 
-        <li class="main-links-globus">
+        <li class="main-links-globus main-links__li">
           <a class="main__links__sections" href="#step-five">STEP 5</a>
         </li> 
-        <li class="main-links-globus">
+        <li class="main-links-globus main-links__li">
           <a class="main__links__sections" href="#step-six">STEP 6</a>
         </li> 
-        <li class="main-links-globus">
+        <li class="main-links-globus main-links__li">
           <a class="main__links__sections" href="#step-seven">STEP 7</a>
         </li> 
-        <li class="main-links-globus">
+        <li class="main-links-globus main-links__li">
           <a class="main__links__sections" href="#step-eight">STEP 8</a>
         </li> 
       </ul>
