--- a/index/resources.html
+++ b/index/resources.html
@@ -52,7 +52,7 @@
   <main> 
     <section class="resources-description">
 <!--       <h3 class="">NSRDB RESOURCES</h3> -->
-      <p>The following resources provide additional information about the NSRDB.
+      <p class="header-p">The following resources provide additional information about the NSRDB.
       </p>
       <ul class="main__links">
         <li class="main-links__li">
