Add international page

--- a/index/US-data.html
+++ b/index/US-data.html
@@ -211,7 +211,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr class="section">
               <td>Clearsky DHI</td>
               <td>Watt per square meter</td>
               <td>- Modeled solar radiation on a horizontal surface received from the sky excluding the solar disk.
@@ -321,7 +321,7 @@
           11/12/2015 – Relative Humidity data is incorrect; we are in the process of correcting the data.
 
           11/12/2015 – There is a time period in few pixels where the maximum DNI goes above the extraterrestrial values; we are in the process of correcting this.</p>
-        </div>
+        <
       </section>
       <section class="footer_image"></section>
     </main>
