--- a/index/TMY-page.html
+++ b/index/TMY-page.html
@@ -47,11 +47,10 @@
     </nav>
     <header class="header"> 
       <h1 class="header__h1">NATIONAL  SOLAR RADIATION DATABASE</h1>
-      <h2 class="header__h2">ABOUT</h2>
+      <h2 class="header__h2 TMY-header">TYPICAL METEOROLOGICAL YEAR</h2>
     </header>
     <main>
       <section class="TMY__section">
-        <h3 class="TMY__h3">TYPICAL METEOROLOGICAL YEAR</h3>
         <p>TMY stands for "typical meteorological year" and is a widely used type of data available through the NSRDB. TMYs contain one year of hourly data that best represent weather conditions over a multiyear period.
         </p>
       </section>
@@ -70,12 +69,15 @@
         </li class="main-links__li">
       </ul>
       <section class="what-is-TMY__section" id="what-is-TMY">
+        <div class="drop-shadow-text-box">
           <h3 class="TMY__h3" >WHAT IS TMY?</h3>
           <p>The data are considered "typical" because the entirety of the original solar radiation and meteorological data is condensed into one year's worth of the most usual conditions. Although a TMY can be thought of as an average, the methods used to calculate it consider many factors beyond a simple calculation of average values, including solar resource data and weather data such as wind speed and ambient temperature.
 
           To calculate a TMY, a multiyear data set is analyzed and 12 months are chosen from that time frame that best represent typical conditions. For example, a TMY developed from a set of data for the years 1998–2005 might use data from 2000 for January, 2003 for February, 1999 for March, and so on.</p>
+        </div>
       </section>
       <section id="data-used">
+        <div class="drop-shadow-text-box">
           <h3 class="TMY__h3">WHAT IS TMY DATA USED FOR?</h3>
           <p>TMYs are intended to be used in computer simulations of solar energy conversion systems and building systems. They make it possible to do production estimates and performance comparisons of different system types, configurations, and locations in the United States and its territories.
 
@@ -83,12 +85,15 @@
         </div>
       </section>
       <section class="TMY-data-format__section" id="format-data">
+        <div class="drop-shadow-text-box">
           <h3>FORMAT OF TMY DATA</h3>
           <p>All TMY data are now in the System Advisor Model (SAM) CSV file format. Formerly, TMY data were available only through TMY file formats (i.e., TMY, TMY2, TMY3). By switching to the more user-friendly SAM CSV, TMY data are more flexible than ever and can be plugged into the vast majority of solar modeling programs.
 
           Gridded TMY data is derived from the 4-km by 4-km gridded NSRDB data, with the 1998–2014 data being used in the currently available TMY.</p>
+        </div>
       </section>
       <section class="TMY-data__table" id="TMY-tables">
+        <div class="drop-shadow-text-box">
         <h3>TMY DATA TABLES</h3>
         <table class="data__table-1">
           <caption>Gridded TMY data header (line1)</caption>
@@ -204,6 +209,7 @@
             </tr>
           </tbody>
         </table>
+        </div>
       </section>
       <section class="footer_image"></section>
     </main>
