Fix colors of header buttons on main page and text size for lists on resources

--- a/index/international-data.html
+++ b/index/international-data.html
@@ -148,14 +148,16 @@
         </div>
       </section>
       <section class="ref" id="ref">
-        <ul>
-        <h3>REFERENCES</h3>
-          <li>1. Perez R., P. Ineichen, K. Moore, M. Kmiecik, C. Chain, R. George and F. Vignola, (2002): A New Operational Satellite-to-Irradiance Model. Solar Energy 73, 5, pp. 307-317.</li>
-          <li>2. Perez R., P. Ineichen, M. Kmiecik, K. Moore, R. George and D. Renné, (2004): Producing satellite-derived irradiances in complex arid terrain. Solar Energy 77, 4, 363-370</li>
-          <li>3. Perez, R., T. Cebecauer, M. Suri, (2013): Semi-Empirical Satellite Models, in: Solar Resource Assessment and Forecasting (Editor Jan Kleissl), Elsevier, 2013</li>
-          <li>4. Perez R., & J. Schlemmer, (2010): FINAL REPORT NREL Contract No.  AEK88827001 Modification 3</li>
-          <li>5. Gueymard, C., (2013): Personal Communication</li>
-        </ul>
+        <div class="drop-shadow-text-box">
+          <ul>
+            <h3>REFERENCES</h3>
+            <li>1. Perez R., P. Ineichen, K. Moore, M. Kmiecik, C. Chain, R. George and F. Vignola, (2002): A New Operational Satellite-to-Irradiance Model. Solar Energy 73, 5, pp. 307-317.</li>
+            <li>2. Perez R., P. Ineichen, M. Kmiecik, K. Moore, R. George and D. Renné, (2004): Producing satellite-derived irradiances in complex arid terrain. Solar Energy 77, 4, 363-370</li>
+            <li>3. Perez, R., T. Cebecauer, M. Suri, (2013): Semi-Empirical Satellite Models, in: Solar Resource Assessment and Forecasting (Editor Jan Kleissl), Elsevier, 2013</li>
+            <li>4. Perez R., & J. Schlemmer, (2010): FINAL REPORT NREL Contract No.  AEK88827001 Modification 3</li>
+            <li>5. Gueymard, C., (2013): Personal Communication</li>
+          </ul>
+        </div>  
       </section>
       <section class="footer_image"></section>
     </main>
