Add adjustments to data page with suggestions for update

--- a/index/US-data.html
+++ b/index/US-data.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>US Data</title>
   <link rel="stylesheet" href="../styles/US-data.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
     <nav class="nav">
@@ -70,6 +69,14 @@
           <a class="links__page" href="#notes">NOTES</a>
         </li> 
       </ul>
+      <section class="main__collage">
+        <img class="main__collage__image main-image1" src="../images/nasa-orb.jpg" alt="">
+        <img class="main__collage__image main-image2" src="../images/solar-panel.jpeg" alt="">
+        <img class="main__collage__image main-image3" src="../images/nyc-night.jpg" alt="">
+        <img class="main__collage__image main-image4" src="../images/wind-energy.jpeg" alt="">
+        <img class="main__collage__image main-image5" src="../images/andreas-gucklhorn-cut.jpg" alt="">
+        <img class="main__collage__image main-image6" src="../images/american-public-power-association-cut.jpeg" alt="">
+      </section>
       <section class="available-versions__section" id="available-versions">
         <div class="drop-shadow-text-box">
           <h3>AVAILABLE VERSIONS</h3>
