--- a/index/international-data.html
+++ b/index/international-data.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>International Data</title>
   <link rel="stylesheet" href="../styles/international-data.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
     <nav class="nav">
@@ -61,7 +60,6 @@
         <li class="main-links__li">
           <a class="links__page" href="#international-availabilty">
           INTERNATIONAL AVAILABILITY</a>
-
         </li>
         <li class="main-links__li">
           <a class="links__page" href="#SUNY-model">SUNY MODEL</a>
