--- a/index/resources.html
+++ b/index/resources.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resources</title>
   <link rel="stylesheet" href="../styles/resources.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <body>
   <nav class="nav">
     <ul class="nav__headers">
