--- a/index/TMY-page.html
+++ b/index/TMY-page.html
@@ -50,7 +50,7 @@
     </header>
     <main>
       <section class="TMY__section">
-        <p>TMY stands for "typical meteorological year" and is a widely used type of data available through the NSRDB. TMYs contain one year of hourly data that best represent weather conditions over a multiyear period.
+        <p class="top-parph">TMY stands for "typical meteorological year" and is a widely used type of data available through the NSRDB. TMYs contain one year of hourly data that best represent weather conditions over a multiyear period.
         </p>
       </section>
       <ul class="main__links about-page__main-links">
@@ -67,6 +67,7 @@
           <a class="links__page" href="#TMY-tables">TMY DATA TABLES</a>
         </li class="main-links__li">
       </ul>
+      <section class="photo-break"></section>
       <section class="what-is-TMY__section" id="what-is-TMY">
         <div class="drop-shadow-text-box">
           <h3 class="TMY__h3" >WHAT IS TMY?</h3>
