Add photos and move headers into photos

--- a/index/US-data.html
+++ b/index/US-data.html
@@ -69,17 +69,10 @@
           <a class="links__page" href="#notes">NOTES</a>
         </li> 
       </ul>
-      <section class="main__collage">
-        <img class="main__collage__image main-image1" src="../images/nasa-orb.jpg" alt="">
-        <img class="main__collage__image main-image2" src="../images/solar-panel.jpeg" alt="">
-        <img class="main__collage__image main-image3" src="../images/nyc-night.jpg" alt="">
-        <img class="main__collage__image main-image4" src="../images/wind-energy.jpeg" alt="">
-        <img class="main__collage__image main-image5" src="../images/andreas-gucklhorn-cut.jpg" alt="">
-        <img class="main__collage__image main-image6" src="../images/american-public-power-association-cut.jpeg" alt="">
-      </section>
+      <section class="photo-break photo_A"><h3>AVAILABLE VERSIONS</h3></section>
       <section class="available-versions__section" id="available-versions">
         <div class="drop-shadow-text-box">
-          <h3>AVAILABLE VERSIONS</h3>
+          
           <p>
             There have been substantial improvements in solar data collection and modeling technologies throughout the 25 years of existence of the NSRDB. As better technologies became available, NREL migrated to these new technologies and updated the NSRDB on an ongoing basis. NREL implemented major changes to the original database in 1991, 2005, and 2012.
 
@@ -147,9 +140,9 @@
         </table>
         </div>
       </section>
+      <section class="photo-break photo_B"><h3>ABOUT THE PHYSICAL SOLAR MODEL</h3></section>
       <section class="physical-solar-model__section" id="psm">
         <div class="drop-shadow-text-box">
-          <h3>ABOUT THE PHYSICAL SOLAR MODEL</h3>
           <p>The current version of the NSRDB (v2.0.0) was developed using the Physical Solar Model (PSM), and offers users the latest available data (1998–2014). NSRDB comprises 30-minute solar and meteorological data for approximately 2 million 0.038-degree latitude by 0.038-degree longitude surface pixels (nominally 4 km2). The area covered is bordered by longitudes 25° W on the east and 175° W on the west, and by latitudes -20° S on the south and 60° N on the north.
 
           The PSM was developed by NREL in collaboration with the University of Wisconsin, the National Oceanic and Atmospheric Administration (NOAA), and Solar Consulting Services. PSM uses cloud properties from the satellite retrievals and then uses those properties to calculate surface radiation. The cloud properties in PSM are generated using the AVHRR Pathfinder Atmospheres-Extended (PATMOS-x) algorithms that have been adapted for use with GOES data. NREL developed the all-sky radiation model for solar applications (FARMS) that incorporates the cloud properties from PATMOS-x, aerosol optical depth (AOD), and precipitable water vapor (PWV) from ancillary sources to compute GHI in cloudy scenes. The DNI for cloudy scenes is then computed using the DISC model. The REST2 model is used to estimate DNI and GHI under clear sky conditions.  The meteorological data set associated with the NSRDB data was derived from NASA Modern Era-Retrospective Analysis (MERRA) datasets. MERRA has varying temporal and spatial resolution depending on the variable; however, the variables used in the NSRDB are hourly at 40 km2 spatial resolution, which is then interpolated to match the 4 km by 4 km grid and half-hourly temporal resolution.</p>
@@ -310,9 +303,10 @@
         </table>
         </div>
       </section>
+      <section class="photo-break photo_C"><h3>DATA AVAILABILITY</h3></section>
       <section class="data-availability">
         <div class="drop-shadow-text-box">
-          <h3>DATA AVAILABILITY</h3>
+        
           <p>USA: 1998–2014
 
           Other countries: 1998–2014, with 2005–2012 available publicly. To obtain the full 1998–2014 data set, please contactnsrdb@nrel.gov.
