--- a/index/TMY-page.html
+++ b/index/TMY-page.html
@@ -67,35 +67,39 @@
           <a class="links__page" href="#TMY-tables">TMY DATA TABLES</a>
         </li class="main-links__li">
       </ul>
+      <section class="photo-break photo_A"><h3 class="TMY__h3" >WHAT IS TMY?</h3></section>
       <section class="what-is-TMY__section" id="what-is-TMY">
-        <div class="drop-shadow-text-box">
-          <h3 class="TMY__h3" >WHAT IS TMY?</h3>
+        <div class="drop-shadow-text-box">         
           <p>The data are considered "typical" because the entirety of the original solar radiation and meteorological data is condensed into one year's worth of the most usual conditions. Although a TMY can be thought of as an average, the methods used to calculate it consider many factors beyond a simple calculation of average values, including solar resource data and weather data such as wind speed and ambient temperature.
 
           To calculate a TMY, a multiyear data set is analyzed and 12 months are chosen from that time frame that best represent typical conditions. For example, a TMY developed from a set of data for the years 1998–2005 might use data from 2000 for January, 2003 for February, 1999 for March, and so on.</p>
         </div>
       </section>
-      <section class="photo-break"></section>
+      <section class="photo-break photo_B">
+        <h3 class="TMY__h3">WHAT IS TMY DATA USED FOR?</h3>
+      </section>
       <section id="data-used">
         <div class="drop-shadow-text-box">
-          <h3 class="TMY__h3">WHAT IS TMY DATA USED FOR?</h3>
           <p>TMYs are intended to be used in computer simulations of solar energy conversion systems and building systems. They make it possible to do production estimates and performance comparisons of different system types, configurations, and locations in the United States and its territories.
 
           Because TMYs represent typical rather than extreme conditions, they are not suited for designing systems to meet the worst-case conditions occurring at a location.</p>
         </div>
       </section>
+      <section class="photo-break photo_C">
+        <h3>FORMAT OF TMY DATA</h3>
+      </section>
       <section class="TMY-data-format__section" id="format-data">
         <div class="drop-shadow-text-box">
-          <h3>FORMAT OF TMY DATA</h3>
           <p>All TMY data are now in the System Advisor Model (SAM) CSV file format. Formerly, TMY data were available only through TMY file formats (i.e., TMY, TMY2, TMY3). By switching to the more user-friendly SAM CSV, TMY data are more flexible than ever and can be plugged into the vast majority of solar modeling programs.
 
           Gridded TMY data is derived from the 4-km by 4-km gridded NSRDB data, with the 1998–2014 data being used in the currently available TMY.</p>
         </div>
       </section>
-
+       <section class="photo-break photo_D">
+        <h3>TMY DATA TABLES</h3>
+      </section>
       <section class="TMY-data__table" id="TMY-tables">
         <div class="drop-shadow-text-box">
-        <h3>TMY DATA TABLES</h3>
         <table class="data__table-1">
           <caption>Gridded TMY data header (line1)</caption>
           <thead>
