--- a/index/contact.html
+++ b/index/contact.html
@@ -31,9 +31,9 @@
         <button class="nav__drop-down__button"></button>
         <div class="nav__drop-down__content">
           <a href="https://nsrdb.nrel.gov/">HOME</a>
-          <a href="https://nsrdb.nrel.gov/#access-data">ACCESTHE DATA</a>
-          <a href="https://nsrdb.nrel.gov/#whatis">ABOUT THDATA</a>
-          <a href="https://nsrdb.nrel.gov/resources">RESOURC</a>
+          <a href="https://nsrdb.nrel.gov/#access-data">ACCESS THE DATA</a>
+          <a href="https://nsrdb.nrel.gov/#whatis">ABOUT THE DATA</a>
+          <a href="https://nsrdb.nrel.gov/resources">RESOURCE</a>
           <a href="https://nsrdb.nrel.gov/contact">CONTACT</a>
         </div>
       </div>
