--- a/index/contact.html
+++ b/index/contact.html
@@ -18,7 +18,7 @@
           <a href="https://nsrdb.nrel.gov/#access-data">ACCESS THE DATA</a>
         </li>
         <li class="about-page">
-          <a id="header__nav--active" href="https://nsrdb.nrel.gov/#whatis">ABOUT THE DATA</a>
+          <a href="https://nsrdb.nrel.gov/#whatis">ABOUT THE DATA</a>
         </li>
         <li class="resource-page">
           <a href="https://nsrdb.nrel.gov/resources">RESOURCES</a>
