--- a/index2.html
+++ b/index2.html
@@ -13,13 +13,13 @@
     <nav class="nav">
       <ul class="nav__headers">
         <li class="home-page">
-          <a href="https://nsrdb.nrel.gov/">HOME</a>
+          <a  id="header__nav--active" href="https://nsrdb.nrel.gov/">HOME</a>
         </li>
         <li class="access-data">
           <a href="https://nsrdb.nrel.gov/#access-data">ACCESS THE DATA</a>
         </li>
         <li class="about-page">
-          <a id="header__nav--active"   href="header__nav--active" href="https://nsrdb.nrel.gov/#whatis">ABOUT THE DATA</a>
+          <a href="header__nav--active" href="https://nsrdb.nrel.gov/#whatis">ABOUT THE DATA</a>
         </li>
         <li class="resource-page">
           <a href="https://nsrdb.nrel.gov/resources">RESOURCES</a>
